# endoreg-usb-encrypter

./: .gitignore  README.md  devenv.nix  devenv.yaml  flake.nix  hdd-info.json  hello.py  output.json  pyproject.toml  result  runner.py  sensitive-hdd.nix
.direnv/: flake-profile-7-link  flake-profile-8-link
endoreg_usb_encrypter/: hdd-info.json  main.py  output.json  result
endoreg_usb_encrypter/functions/: __init__.py  base.py  cleanup_device.py  create_partitions.py  custom_logging.py  decrypt_and_mount_partition.py  encrypt_partition.py  unmount_and_mount_all_partitions.py  unmount_partitions.py
endoreg_usb_encrypter/tests/: test_list_devices.py  test_run_command.py  test_setup_logging.py
